--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&family=Roboto:wght@400;500;700&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  background: #F8F8F8;
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-size: 14px;
 }
 
 a {
@@ -23,4 +27,32 @@ a {
     color: white;
     background: black;
   }
+}
+
+.container {
+  position: relative;
+  max-width: 1170px;
+  margin: 0 5%;
+}
+
+.sectionTitle {
+  background: #ffffff;
+  border-radius: 5px;
+  width: 100%;
+  padding: 0.5em 1em;
+  /* height: 78px; */
+}
+
+.messageChat {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 346px;
+  position: fixed;
+  bottom: 4px;
+  right: 5%;
+  background: #FFFFFF;
+  box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px 10px 0px 0px;
+  padding: 0.1em 1em;
 }
